--- a/third-grid.css
+++ b/third-grid.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgb(49, 49, 49);
     font-family: sans-serif;
+    margin: 50px;
 }
 .container {
     color: white;
@@ -8,7 +9,7 @@ body {
     display: grid;
     grid-gap: 5px;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 80px 100px 400px 80px;
+    grid-template-rows: 80px 100px 350px 80px;
     grid-template-areas: 
     "h h"
     "m c"
@@ -19,36 +20,132 @@ body {
     border-radius: 15px;
     background-image: linear-gradient(to right, #355C7D, #6C5B7B, #C06C84);
     grid-area: h;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .main {
     border-radius: 15px;
     background-image: linear-gradient(to right, #355C7D, #6C5B7B, #C06C84);
     grid-area: m;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .content {
+    color: black;
     border-radius: 15px;
     background-image: linear-gradient(to right, #355C7D, #6C5B7B, #C06C84);
     grid-area: c;
     display: grid;
-    grid-gap: 5px;;
-    grid-template-areas: 
-    ""
-    ""
-    ""
-    ""
-    ""
-    ""
-    "";
-}
-.inner-container {
+    gap: 5px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: repeat(10, 10%);
+    padding: 30px;
 }
 .title-container {
-    background-color: rgb(228, 226, 226);
-    grid-area: t;
-    border-radius: 5px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column: 1 / 5;
+    grid-row: 1 / 2;
+}
+.box1 {
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(226, 226, 226);
+    grid-column: 1 / 3;
+    grid-row: 2 / 4;
+}
+.box2 {
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(226, 226, 226);
+    grid-column: 3 / 4;
+    grid-row: 2 / 6;
+}
+.box3 {
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(226, 226, 226);
+    grid-column: 4 / 5;
+    grid-row: 2 / 4;
+}
+.box4 {
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(226, 226, 226);
+    grid-column: 1 / 2;
+    grid-row: 4 / 6;
+}
+.box5 {
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(226, 226, 226);
+    grid-column: 1 / 3;
+    grid-row: 6 / 8;
+}
+.box6 {
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(226, 226, 226);
+    grid-column: 1 / 4;
+    grid-row: 8 / 10;
+}
+.box7 {
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(226, 226, 226);
+    grid-column: 4 /5;
+    grid-row: 4 / 7;
+}
+.box8 {
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(226, 226, 226);
+    grid-column: 2 / 3;
+    grid-row: 4 / 6;
+}
+.box9 {
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(226, 226, 226);
+    grid-column: 3 / 4;
+    grid-row: 6 / 8;
+}
+.box10 {
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(226, 226, 226);
+    grid-column: 4 / 5;
+    grid-row: 7 / 10;
 }
 .footer {
     border-radius: 15px;
     background-image: linear-gradient(to right, #355C7D, #6C5B7B, #C06C84);
     grid-area: f;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
