--- a/third-grid.css
+++ b/third-grid.css
@@ -32,7 +32,7 @@ body {
     justify-content: center;
     align-items: center;
 }
-.content {
+.content-box {
     color: black;
     border-radius: 15px;
     background-image: linear-gradient(to right, #355C7D, #6C5B7B, #C06C84);
